# ChangeLog for gnome-base/eel
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/Attic/ChangeLog,v 1.110 2005/07/26 20:52:18 leonardop Exp $

  26 Jul 2005; Leonardo Boshell <leonardop@gentoo.org> eel-2.10.1.ebuild:
  Stable on x86.

  11 Jul 2005; Stephen P. Becker <geoman@gentoo.org> eel-2.10.0.ebuild,
  eel-2.10.1.ebuild:
  stable on mips

  02 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> eel-2.10.0.ebuild:
  Stable on alpha.

  25 Jun 2005; Guy Martin <gmsoft@gentoo.org> eel-2.10.0.ebuild,
  eel-2.10.1.ebuild:
  Stable on hppa.

  13 Jun 2005; Marinus Schraal <foser@gentoo.org> eel-2.10.0.ebuild :
  Hey that makes sense.. -test (#91571)

  13 Jun 2005; Bryan Østergaard <kloeri@gentoo.org> eel-2.10.0.ebuild:
  Add ~alpha keyword.

  12 Jun 2005; Olivier Crête <tester@gentoo.org> eel-2.10.0.ebuild,
  eel-2.10.1.ebuild:
  Stable on amd64 and added RESTRICT=test because the tests fail with sandbox
  (bug #91571)

  12 Jun 2005; Tobias Scherbaum <dertobi123@gentoo.org> eel-2.10.0.ebuild:
  Stable on ppc.

  09 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> eel-2.10.0.ebuild:
  Stable on sparc

  09 Jun 2005; Markus Rothe <corsair@gentoo.org> eel-2.10.0.ebuild:
  Stable on ppc64

  20 May 2005; foser <foser@gentoo.org> eel-2.10.{0,1}.ebuild :
  Fix gtk+ dep (#92013)

  06 May 2005; Markus Rothe <corsair@gentoo.org> eel-2.10.0.ebuild,
  eel-2.10.1.ebuild:
  Added ~ppc64 to KEYWORDS

*eel-2.10.1 (18 Apr 2005)

  18 Apr 2005; Joe McCann <joem@gentoo.org> +eel-2.10.1.ebuild:
  bugfix release

  02 Apr 2005; Stephen P. Becker <geoman@gentoo.org> eel-2.8.2.ebuild:
  stable on mips

  01 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org>
  files/eel-2.8.2-amd64.patch:
  commited another version of the patch

  01 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org>
  +files/eel-2.8.2-amd64.patch, eel-2.8.2.ebuild:
  added a patch for amd64 which to solve a problem related to integer tests