@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/Attic/eel-2.10.1.ebuild,v 1.10 2005/07/26 20:52:18 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/Attic/eel-2.10.1.ebuild,v 1.11 2005/07/27 14:33:37 gustavoz Exp $
 
 inherit gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/"
 
 LICENSE="LGPL-2"
 SLOT="2"
-KEYWORDS="~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 sparc x86"
 IUSE=""
 
 RDEPEND=">=media-libs/libart_lgpl-2.3.8
