@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/libgtkhtml
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/Attic/ChangeLog,v 1.134 2005/07/26 18:10:31 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/Attic/ChangeLog,v 1.135 2005/07/27 14:29:22 gustavoz Exp $
+
+  27 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  libgtkhtml-2.6.3.ebuild:
+  Stable on sparc
 
   26 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
   libgtkhtml-3.6.2.ebuild:
