@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/eel
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/Attic/ChangeLog,v 1.110 2005/07/26 20:52:18 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/Attic/ChangeLog,v 1.111 2005/07/27 14:33:37 gustavoz Exp $
+
+  27 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> eel-2.10.1.ebuild:
+  Stable on sparc
 
   26 Jul 2005; Leonardo Boshell <leonardop@gentoo.org> eel-2.10.1.ebuild:
   Stable on x86.
